--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,4 +17,4 @@ steps:
 - task: PublishBuildArtifacts@1
   inputs:
     pathToPublish: '$(Build.ArtifactStagingDirectory)'
-    artifactName: app
+    artifactName: franki_app
